Bay of pigs and groupthink

--- a/talk.bib
+++ b/talk.bib
@@ -15,3 +15,11 @@
   year={1998},
   publisher={American Public Health Association}
 }
+
+@article{janis1972victims,
+  title={Victims of Groupthink: A psychological study of foreign-policy decisions and fiascoes.},
+  author={Janis, Irving L},
+  year={1972},
+  publisher={Houghton Mifflin}
+}
+
